--- a/.env.production
+++ b/.env.production
@@ -6,21 +6,26 @@ NEXT_PUBLIC_API_URL=https://api.s4labs.io
 NEXT_PUBLIC_WS_URL=wss://api.s4labs.io
 
 # Blockchain Configuration
-NEXT_PUBLIC_CHAIN_ID=8453
-NEXT_PUBLIC_RPC_URL=https://mainnet.base.org
-NEXT_PUBLIC_CHAIN_NAME=Base
-NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://basescan.org
+NEXT_PUBLIC_CHAIN_ID=84532
+NEXT_PUBLIC_BASE_RPC_URL=https://base-sepolia.g.alchemy.com/v2/demo
+NEXT_PUBLIC_BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/demo
+NEXT_PUBLIC_RPC_URL=https://sepolia.base.org
+NEXT_PUBLIC_CHAIN_NAME=Base Sepolia
+NEXT_PUBLIC_BLOCK_EXPLORER_URL=https://sepolia.basescan.org
+
+# Alchemy Configuration (placeholder - set in Vercel)
+NEXT_PUBLIC_ALCHEMY_ID=demo
 
 # WalletConnect / Reown Configuration
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=8e62b6e5c31302574d1ab427b5cb39dc
 
-# Smart Contract Addresses (Base Mainnet)
+# Smart Contract Addresses (Base Sepolia)
 # TODO: Replace with actual deployed contract addresses
-NEXT_PUBLIC_TOKEN_FACTORY_ADDRESS=
-NEXT_PUBLIC_BONDING_CURVE_ADDRESS=
-NEXT_PUBLIC_GRADUATION_MANAGER_ADDRESS=
-NEXT_PUBLIC_ESCROW_FACTORY_ADDRESS=
-NEXT_PUBLIC_TREASURY_ADDRESS=
+NEXT_PUBLIC_TOKEN_FACTORY_ADDRESS=0xdFA01a79fb8Bb816BC77aE9cC6C2404b87c2cd18
+NEXT_PUBLIC_BONDING_CURVE_ADDRESS=0xdFA01a79fb8Bb816BC77aE9cC6C2404b87c2cd18
+NEXT_PUBLIC_GRADUATION_MANAGER_ADDRESS=0xdFA01a79fb8Bb816BC77aE9cC6C2404b87c2cd18
+NEXT_PUBLIC_ESCROW_FACTORY_ADDRESS=0xdFA01a79fb8Bb816BC77aE9cC6C2404b87c2cd18
+NEXT_PUBLIC_TREASURY_ADDRESS=0xdFA01a79fb8Bb816BC77aE9cC6C2404b87c2cd18
 
 # Feature Flags
 NEXT_PUBLIC_ENABLE_TESTNETS=false
